// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`big STEM tool render goldens (default state) > renders + pins a digest for appLab 1`] = `
{
  "buttons": 27,
  "inputs": 6,
  "lengthBucket": 79,
  "selects": 0,
  "sha": "d506eef49009cc96",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for assessmentLiteracy 1`] = `
{
  "buttons": 10,
  "inputs": 0,
  "lengthBucket": 30,
  "selects": 0,
  "sha": "6d2aa43edf8cc526",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for beehive 1`] = `
{
  "buttons": 119,
  "inputs": 14,
  "lengthBucket": 873,
  "selects": 5,
  "sha": "6c42f11f754b5764",
  "svgs": 1,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for birdLab 1`] = `
{
  "buttons": 127,
  "inputs": 1,
  "lengthBucket": 750,
  "selects": 0,
  "sha": "e3b85d0b56b1205e",
  "svgs": 2,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for cephalopodLab 1`] = `
{
  "buttons": 52,
  "inputs": 1,
  "lengthBucket": 256,
  "selects": 0,
  "sha": "ce4dd2504bd3f002",
  "svgs": 1,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for learningLab 1`] = `
{
  "buttons": 22,
  "inputs": 0,
  "lengthBucket": 89,
  "selects": 0,
  "sha": "dd3bc57a7aba62a0",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for nutritionLab 1`] = `
{
  "buttons": 24,
  "inputs": 0,
  "lengthBucket": 166,
  "selects": 0,
  "sha": "9e577dfd9d926fc0",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for plateTectonics 1`] = `
{
  "buttons": 36,
  "inputs": 5,
  "lengthBucket": 215,
  "selects": 0,
  "sha": "61d7ab944944522d",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for printingPress 1`] = `
{
  "buttons": 25,
  "inputs": 0,
  "lengthBucket": 226,
  "selects": 0,
  "sha": "59191292809ddccb",
  "svgs": 2,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for raptorHunt 1`] = `
{
  "buttons": 50,
  "inputs": 1,
  "lengthBucket": 147,
  "selects": 0,
  "sha": "ef79c3b080f5c0df",
  "svgs": 2,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for roadReady 1`] = `
{
  "buttons": 77,
  "inputs": 5,
  "lengthBucket": 376,
  "selects": 2,
  "sha": "1e5a6087daa3155e",
  "svgs": 1,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for solarSystem 1`] = `
{
  "buttons": 47,
  "inputs": 1,
  "lengthBucket": 256,
  "selects": 0,
  "sha": "c5faf4e418a7599c",
  "svgs": 0,
}
`;
